--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import Nav from '../components/Nav.astro';
+import Form from '../components/Form.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <html lang="en">
@@ -7,9 +10,26 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Comment API Website</title>
+		<title>Comments Dashboard</title>
 	</head>
 	<body>
-		<h1>Cloudflare Workers Demo</h1>
+		<Nav />
+		<Form />
+		<Footer />
 	</body>
 </html>
+
+
+<style>
+	html {
+		font-family: sans-serif;
+		border: 1.5em solid #f0e040;
+		height: 100vh;
+	}
+
+	body {
+		min-height: 95vh;
+    display: flex;
+    flex-direction: column;
+	}
+</style>
