--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,4 +14,6 @@
     <br/> 
     Even what your favorite frontend framework! 😅 / ¡Incluso cuál es tu framework frontend favorito! 😅
   </p>
+  <!-- <img class="logo" src="../../jsconfchile.svg" alt="JSConf Chile Logo"> -->
 </section>
+
