--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Footer from '../components/Footer.astro';
 <style>
 	html {
 		font-family: sans-serif;
-		border: 1.5em solid #f0e040;
+		border: 1.2em solid #ddd;
 		height: 100vh;
 	}
 
