--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,5 +3,5 @@
 ---
 
 <footer class="mt-auto">
-  <p class="text-center text-md font-medium underline pb-2">Powered by Astro, Cloudflare Pages & D1 </p>
+  <p class="text-center text-md font-medium underline pb-2">Powered by Astro, Cloudflare Pages & KV </p>
 </footer>
