--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -11,7 +11,7 @@
       Code of Conduct / Código de Conducta
     </a> in mind.
   </p>
-  <form class='flex justify-center content-center'>
+  <form action="/api/postcomments" method="POST" class='flex justify-center content-center'>
     <div
       class='w-1/2 mb-4 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-700 dark:border-gray-600'
     >
