--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,11 @@
 import Nav from '../components/Nav.astro';
 import Form from '../components/Form.astro';
 import Footer from '../components/Footer.astro';
+
+const response = await fetch('http://127.0.0.1:8788/api/getcomments');
+const data = await response.json();
+
+console.log(data)
 ---
 
 <html lang="en">
@@ -12,19 +17,34 @@ import Footer from '../components/Footer.astro';
 		<meta name="generator" content={Astro.generator} />
 		<title>Comments Dashboard</title>
 	</head>
-	<body>
+	<body class="dark:bg-gray-900 dark:text-white">
 		<Nav />
 		<Form />
+		<section>
+			<table>
+				<thead>
+					<tr>
+						<th>Username</th>
+						<th>Comment</th>
+					</tr>
+				</thead>
+				<tbody>
+					{data.map((comment) => (
+						<tr>
+							<td>{comment.username}</td>
+							<td>{comment.comment}</td>
+						</tr>
+					))}
+				</tbody>
+			</table>
+		</section>
 		<Footer />
 	</body>
 </html>
 
-
 <style>
 	html {
 		font-family: sans-serif;
-		border: 1.2em solid #ddd;
-		height: 100vh;
 	}
 
 	body {
