--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -11,7 +11,7 @@
       Code of Conduct / Código de Conducta
     </a> in mind.
   </p>
-  <form action="/api/postcomments" method="POST" class='flex justify-center content-center'>
+  <form method="POST" action="http://127.0.0.1:8788/api/postcomments" id="form" class='flex justify-center content-center'>
     <div
       class='w-1/2 mb-4 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-700 dark:border-gray-600'
     >
@@ -19,6 +19,7 @@
         <label for='comment' class='sr-only'>Your comment</label>
         <textarea
           id='comment'
+          name="comment"
           rows='6'
           class='w-full p-6 text-md text-gray-900 bg-white border-0 dark:bg-gray-800 focus:ring-0 dark:text-white dark:placeholder-gray-400'
           placeholder='Add a comment... / Agrega un comentario...'
@@ -28,10 +29,11 @@
         <label for='comment' class='sr-only'>Your name</label>
         <input
           type='text'
-          id='helper-text'
-          aria-describedby='helper-text-explanation'
+          id='username'
+          name="username"
+          aria-describedby='username'
           class='bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500'
-          placeholder='Name / Nombre'
+          placeholder='Username / Nombre'
         />
       </div>
       <div
