--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,12 +4,12 @@
 
 <section>
   <h1 class="my-8 text-center font-extrabold text-4xl">
-    Event Comments Dashboard
+    Comments Dashboard
   </h1>
   <p class="text-center text-xl leading-loose">
     Thanks for attending my talk!
     <br />
-    Drop a comment, what is your favorite thing about this conf?
+    Drop a comment, what is your favorite thing about this event?
   </p>
 </section>
 
